fixed colors for dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,9 @@
   color: #888;
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: black;
+    background-color: #ffffff;
+  }
+}
